tests/snapshots/custom_menu/Admin API Tool/[Align Text] - ID 8.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Align Text]" id="8">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">04321D84-08BD-4007-8F95-CD575BC4A0FC</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Ausrichtung" value="22"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
