tests/snapshots/custom_menu/Admin API Tool/[Favorites] - ID 23.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Favorites]" id="23">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">9CDACC22-25A0-4A0C-8A52-F11DFD6505C3</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Favoriten" value="209"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
