tests/snapshots/custom_menu/Admin API Tool/[Find_Replace] - ID 10.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Find/Replace]" id="10">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">8266B03D-DF03-474E-B933-C6D418154E92</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Suchen/Ersetzen" value="149"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
