tests/snapshots/custom_menu/Admin API Tool/[Font] - ID 11.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Font]" id="11">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">FB36327D-DD11-4445-A7AC-1381026D4530</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Schrift" value="18"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
