tests/snapshots/custom_menu/Admin API Tool/[Go to Layout] - ID 7.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Go to Layout]" id="7">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">A5793FBA-087F-4C7E-BC90-51A8CA74197B</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Gehe zu Layout" value="161"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
