tests/snapshots/custom_menu/Admin API Tool/[Go to Request] - ID 14.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Go to Request]" id="14">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">6DF07D57-0DE9-41F7-9ED2-BA2377043416</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Gehe zu Abfrage" value="172"></Base>
	<Options browseMode="False" findMode="True" previewMode="False"></Options>
</CustomMenu>
