tests/snapshots/custom_menu/Admin API Tool/[Import Records] - ID 5.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Import Records]" id="5">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">11976CC2-C821-4A8C-8648-71BEAECAD28C</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Datensätze importieren" value="155"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
