tests/snapshots/custom_menu/Admin API Tool/[Recent] - ID 4.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Recent]" id="4">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">B3738D14-CDE1-4CE3-B99B-AF1AD4618583</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Letzte" value="32"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
