tests/snapshots/custom_menu/Admin API Tool/[Save_Send Records As] - ID 6.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Save/Send Records As]" id="6">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">D78CFA6B-3D09-45DA-BC6E-81E5B83FE62F</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Datensätze speichern/senden unter" value="168"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
