tests/snapshots/custom_menu/Admin API Tool/[Scripts] - ID 2.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Scripts]" id="2">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">15CAC13F-4294-4794-BC08-DCC4F888C762</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Scripts" value="8"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
