tests/snapshots/custom_menu/Admin API Tool/[Sharing] - ID 13.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Sharing]" id="13">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">D5535D53-0CD5-4471-BABA-9859DE0BD6D5</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Sharing" value="156"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
