tests/snapshots/custom_menu/Admin API Tool/[Show Window] - ID 16.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Show Window]" id="16">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">86473C8F-4048-4F9A-B11B-A2FBC8CC8058</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Fenster einblenden" value="38"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
